apps/shopnow/dev/shopnow-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnow-fe
  labels:
    app.kubernetes.io/name: shopnow-fe
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: shopnow-fe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shopnow-fe
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: shopnow-fe
          image: harbor.devops4u.online/shopnow/frontend:v1
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 3000
              protocol: TCP
